New navigation bar

--- a/groups_en.html
+++ b/groups_en.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +9,18 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html">Events</a>
 <a href="groups_en.html"><div style="color:mediumseagreen;">Groups</div></a>
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
-<br><br>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
 <div class="groupBanner">
   <a href="#flag_au"><img src="images/Flag_of_Australia_(converted).svg" alt="Jump to Australian groups" title="Jump to Australian groups"></a>
   <a href="#flag_ca"><img src="images/Flag_of_Canada_(Pantone).svg" alt="Jump to Canadian groups" title="Jump to Canadian groups"></a>
@@ -29,6 +28,7 @@
   <a href="#flag_fr"><img src="images/Flag_of_France_(2024-present).svg" alt="Jump to French groups" title="Jump to French groups"></a>
   <a href="#flag_de"><img src="images/Flag_of_Germany_(RGB).svg" alt="Jump to German groups" title="Jump to German groups"></a>
   <a href="#flag_nl"><img src="images/Flag_of_the_Netherlands.svg" alt="Jump to Netherlands groups" title="Jump to Netherlands groups"></a>
+  <nl>
   <a href="#flag_nz"><img src="images/Flag_of_New_Zealand.svg" alt="Jump to New Zealand groups" title="Jump to New Zealand groups"></a>
   <a href="#flag_za"><img src="images/Flag_of_South_Africa.svg" alt="Jump to South African groups" title="Jump to South African groups"></a>
   <a href="#flag_ch"><img src="images/Flag_of_Switzerland_(Pantone).svg" alt="Jump to Swiss groups" title="Jump to Swiss groups"></a>
@@ -36,18 +36,18 @@
   <a href="#flag_us"><img src="images/Flag_of_the_United_States_(DoS_ECA_Color_Standard).svg" alt="Jump to US groups" title="Jump to US groups"></a>
   <a href="#flag_ww"><img src="images/Globe_icon.svg.png" alt="Jump to global special-interest groups" title="Jump to global special-interest groups"></a>
 </div>
-</div>
+</div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
-    <div class="content">
-      <div class=tbox>
-        <h1>G1MRA groups</h1>
-        <p>G1MRA has many local groups which range in size from a few friends who run together, up to large scale groups which have their own separate subscription and committee structure, run exhibitions and manage portable tracks.</p>
+
+<div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
+<div class=tbox><h1>G1MRA groups</h1>
+<p>G1MRA has many local groups which range in size from a few friends who run together, up to large scale groups which have their own separate subscription and committee structure, run exhibitions and manage portable tracks.</p>
 <p>Groups arrange their own meetings, many of which are in private gardens. This is a public website, so we do not publish names or addresses for these events. The best way to find out about activities in your area is to locate your nearest group, and then email the group contact using the address in the listing below (quoting your membership number). Alternatively, email enquries to the G1MRA groups coordinator as <a href="mailto:groups@g1mra.com">groups@g1mra.com</a>.</p>
 <p>We also have <a href="#flag_ww">global special interest groups</a> such as the Gauge One 3D Circle which are not limited to geographical regions. These kinds of groups operate mostly via email and electronic forums, and have members all over the world.
 </p>
@@ -137,9 +137,7 @@
 <a href=""><b>1:32 Finescale Group</b></a>&emsp;<a href="mailto:fine-scale-group@g1mra.com">fine-scale-group@g1mra.com</a><br>
 <a href=""><b>The Gauge One 3D Circle</b></a>&emsp;<a href="mailto:3d-circle-group@g1mra.com">3d-circle-group@g1mra.com</a><br>
 <a href=""><b>Vintage Tinplate Group</b></a>&emsp;<a href="mailto:vintage-tinplate-group@g1mra.com">vintage-tinplate-group@g1mra.com</a><br>
-</p>
-      </div><!-- close tbox -->
-    </div>
-  </div><!-- close vbox --></div><!-- close cbox -->
+</p></div><!-- close tbox -->
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
-</html> 
+</html>
