--- a/join_en.html
+++ b/join_en.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +9,26 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html"><div style="color:mediumseagreen;">Join or renew</div></a>
-<br><br></div>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="content">
+
       <div class=tbox>
         <h1>Joining the Gauge One Model Railway Association</h1>
         <p>We welcome all new members with an interest in running Gauge 1 stock and other scales on near-45mm track gauges.</p>
@@ -61,7 +61,7 @@ year’s issues
 <p>Payment may be made by direct bank transfer, cheque or by <a target="_blank" rel="noopener noreferrer" href="https://www.paypal.com/signin">PayPal</a> (with a £2.00 supplement to cover PayPal fees).
 </p>
 </div><!-- close tbox -->
-</div>      
-</div><!-- close vbox --></div><!-- close cbox -->
+
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
