--- a/links_en.html
+++ b/links_en.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +9,38 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html"><div style="color:mediumseagreen;">Resources</div></a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
-<br><br></div>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
+<a href="resources_en.html">Safety</a>
+<a href="resources_en.html">Standards</a>
+<a href="resources_en.html">Designs</a>
+<a href="resources_en.html">Tracks</a>
+<a href="resources_en.html"><div style="color:mediumseagreen;">Links</div></a>
+<a href="resources_en.html">History</a>
+<a href="resources_en.html">Gauge 2</a>
+</div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="content"><div class=ebox>
+<div class=ebox>
 
 <h1>Forums</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Garden Railway Forum</h3>
 <p>
 <a href="https://gardenrails.org">gardenrails.org</a></p>
@@ -40,7 +48,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Tinplate and vintage</h3>
 <p>
 <a href="https://https://www.rmweb.co.uk/forum/115-collectablevintage">https://www.rmweb.co.uk/forum/115-collectablevintage</a></p>
@@ -48,7 +56,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>ScaleOne32</h3>
 <p>
 <a href="https://www.rmweb.co.uk/forum/386-scaleone32">www.rmweb.co.uk/forum/386-scaleone32</a></p>
@@ -56,7 +64,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>My Large Scale</h3>
 <p>
 <a href="https://www.mylargescale.com">www.mylargescale.com</a></p>
@@ -64,7 +72,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Western Thunder</h3>
 <p>
 <a href="https://www.westernthunder.co.uk/forums/g1-32.28">www.westernthunder.co.uk/forums/g1-32.28</a></p>
@@ -74,7 +82,7 @@
 
 <h1>Video channels</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Pennula (Hamburg)</h3>
 <p>
 <a href="https://www.pennula.de/modelleisenbahn.htm">www.pennula.de/modelleisenbahn.htm</a></p>
@@ -84,7 +92,7 @@
 
 <h1>Places to visit</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Bekonscot</h3>
 <p>
 <a href="https://bekonscot.co.uk">bekonscot.co.uk</a></p>
@@ -92,7 +100,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Hara Model Train Museum</h3>
 <p>
 <a href="https://www.hara-mrm.com/english">www.hara-mrm.com/english</a></p>
@@ -100,7 +108,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Mehev</h3>
 <p>
 <a href="https://mehev.de">mehev.de</a></p>
@@ -108,7 +116,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Technik Museum</h3>
 <p>
 <a href="https://technik-museum.de">technik-museum.de</a></p>
@@ -118,7 +126,7 @@
 
 <h1>Other gauge and scale societies</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The Gauge ‘O’ Guild</h3>
 <p>
 <a href="https://gauge0guild.com">gauge0guild.com</a></p>
@@ -126,7 +134,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The 16mm Association</h3>
 <p>
 <a href="https://16mm.org.uk">16mm.org.uk</a></p>
@@ -134,7 +142,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The G-Scale Society</h3>
 <p>
 <a href="https://g-scale-society.co.uk">g-scale-society.co.uk</a></p>
@@ -142,7 +150,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The National 2½ Inch Gauge Association</h3>
 <p>
 <a href="https://n25ga.org">n25ga.org</a></p>
@@ -150,7 +158,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The Gauge 3 Society</h3>
 <p>
 <a href="https://gauge3.org.uk">gauge3.org.uk</a></p>
@@ -158,7 +166,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>The Train Collectors Society</h3>
 <p>
 <a href="https://traincollectors.co.uk">traincollectors.co.uk</a></p>
@@ -168,7 +176,7 @@
 
 <h1>Modelling and engineering societies</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Sutton Model Engineering Club</h3>
 <p>
 <a href="https://suttonmec.org">suttonmec.org</a></p>
@@ -176,7 +184,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>EiWi G1 Railway</h3>
 <p>
 <a href="https://www.swissmodelcarclub.ch/gruppe_eiwi_eisenbahn_witterswil">www.swissmodelcarclub.ch/gruppe_eiwi_eisenbahn_witterswil</a></p>
@@ -184,7 +192,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Gauge One in Denmark</h3>
 <p>
 <a href="https://havebane.dk">havebane.dk</a></p>
@@ -192,7 +200,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Puget Sound Garden Railway Society</h3>
 <p>
 <a href="https://psgrs.org/">psgrs.org/</a></p>
@@ -200,7 +208,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Sidestreet Bannerworks</h3>
 <p>
 <a href="https://sidestreet.info/railways/gr.home.html">sidestreet.info/railways/gr.home.html</a></p>
@@ -210,7 +218,7 @@
 
 <h1>Protoype and standards information</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Mark Wood’s wheel site</h3>
 <p>
 <a href="https://www.markwoodwheels.co.uk/wheels/standardschoice.htm">www.markwoodwheels.co.uk/wheels/standardschoice.htm</a></p>
@@ -218,14 +226,14 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Station Colours</h3>
 <p>
 <a href="https://stationcolours.info">stationcolours.info</a></p>
 <p>A valuable resource for those modelling station buildings in the steam era.
 </p>
 
-</div><!-- close ebox --></div>
-  </div><!-- close vbox --></div><!-- close cbox -->
+</div><!-- close ebox -->
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
