--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,27 +9,28 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
-<br><br></div>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
+
     <div class="banner"><a href="images/home1_en.jpg"><img src="images/thumbs/home1_en.jpg" alt="David Viewing's Locomotion No 1" title="David Viewing's Locomotion No 1"></a> <a href="images/home2_en.jpg"><img src="images/thumbs/home2_en.jpg" alt="The Flying Scotsman" title="The Flying Scotsman"></a> <a href="images/home3_en.jpg"><img src="images/thumbs/home3_en.jpg" alt="Accucraft Class 66" title="Accucraft Class 66"></a> </div><!-- close banner -->
-    <div class="content">
-      <div class=tbox>
+      <div class=hbox><div class=tbox>
         <h1>Welcome to the Gauge One Model Railway Association</h1>
         <p>Gauge 1 model railways run on tracks where the rails are 45mm or 1¾ inches apart. For standard gauge, this corresponds to a scale of 1:32 or around 10mm to the foot.</p>
 <p>The Märklin brothers were the first to offer a complete system of toy train track sections with turnouts, crossovers and curved sections. They showed a figure-of-8 layout at the 1891 Leipzig Spring Fair, and their idea for standardised gauges was quickly taken up by other manufacturers. By 1895, Gauge I was the smallest of the original Märklin gauges along with its near-neighbour Gauge II at 2 inches. A few years later, Gauge Zero (or O-gauge) was  added at 1¼ inches.</p>
@@ -53,43 +53,42 @@
         <h1><a href="events_en.html" style="color:#165f4b;">Events</a></h1>
         
 
-<hr><h3>8 February 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>8 February 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-<hr><h3>10 February 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+<div style="flex-basis:100%"><hr></div><h3>10 February 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
-<hr><h3>21 February 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>21 February 2026</h3>
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
-<hr><h3>21-22 February 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>21-22 February 2026</h3>
 <p><b><a href="https://www.mytenterden.co.uk/events/tenterden-model-railway-exhibition-listing-602-124492.aspx">Tenterden Model Railway Show</a></b><br>Homewood School, Ashford Road <a href="https://www.google.co.uk/maps/search/TN30+6LT">TN30 6LT</a><br><em>Invicta track courtesy of South East Group</em></p>
 
-<hr><h3>28 February - 1 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>28 February - 1 March 2026</h3>
 <p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-garden-rail-show">Midlands Garden Rail Show</a></b><br>Warwickshire Event Centre, <a href="https://www.google.co.uk/maps/search/CV31+1XN">CV31 1XN</a><br><em>Carding Road track courtesy of the Midland Group</em></p>
 
-<hr><h3>4 - 8 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>4 - 8 March 2026</h3>
 <p><b><a href="https://thetraindepartment.com/collections/steam-over-spencer-registration">Steam over Spencer</a></b><br>N.C. Transportation Museum 1 Samuel Spencer Dr. Spencer, NC 28159 USA <br><em>Gathering of friends for a week of steaming with four Gauge 1 tracks available</em></p>
 
-<hr><h3>8 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>8 March 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-<hr><h3>10 March 2026</h3> 
+<div style="flex-basis:100%"><hr></div><h3>10 March 2026</h3> 
 <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
-<hr><h3>21 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>21 March 2026</h3>
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
-<hr><h3>21-22 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>21-22 March 2026</h3>
 <p><b>London Festival of Model Railways</b><br>Alexandra Palace <a href="https://www.google.co.uk/maps/search/N22+7AY">N22 7AY</a><br><em>G1MRA display and stand</em></p>
 
-<hr><h3>21-22 March 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>21-22 March 2026</h3>
 <p><b><a href="https://www.internationale-spur-0-tage.de/">International Gauge 0 and Gauge 1 Days</a></b><br>Hessenhallen in Gießen, Germany<br>(~70km north of Frankfurt)<br><em>Multiple G1 exhibits and traders</em></p>
 
-        <hr>
+        <div style="flex-basis:100%"><hr></div>
         <h1><a href="events_en.html">More events</a>
-
-      </div><!-- close sbox -->
-    </div>
-  </div><!-- close vbox --></div><!-- close cbox -->
+  
+</div><!-- close sbox --></div><!-- close hbox -->
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
