--- a/pastEvents_en.html
+++ b/pastEvents_en.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,47 +9,46 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html"><div style="color:mediumseagreen;">Events</div></a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
-<br><br></div>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
-    <div class="content">
-      <div class=ebox>
-        <h1>Past events</h1>
-        
-<hr><h3>8-12 October 2025</h3>
+
+<div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
+<div class=ebox><h1>Past events</h1>
+<div style="flex-basis:100%"><hr></div><h3>8-12 October 2025</h3>
 <p><b><a href="https://www.steam-events.org/wordpress/?p=273">28th National Steamup Symposium</a></b><br>Grape Festival Fairgrounds, Lodi, California, USA<br><em></em></p>
 
-<hr><h3>11-12 October 2025</h3>
+<div style="flex-basis:100%"><hr></div><h3>11-12 October 2025</h3>
 <p><b>G1MRA AGM and show</b><br>Hopetown Museum , Darlington, <a href="https://www.google.co.uk/maps/search/DL3+6SW">DL3 6SW</a><br><em>Carding Road track courtesy of the Midland Group<br>
 Moordale layout courtesy of the Yorkshire Group<br>
 Trade stands</em></p>
-<hr><h3>16-19 October 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3>16-19 October 2025</h3> 
 <p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-model-engineering-exhibition">Midlands Model Enginering Exhibition</a></b><br>Warwickshire Event Centre <a href="https://www.google.co.uk/maps/search/CV31+1FE">CV31 1FE</a><br><em>Static locomotive display by the Midland Group<br>
 3D Circle display and talk</em></p>
  
-<hr><h3> 24 October 2026</h3> 
+<div style="flex-basis:100%"><hr></div><h3> 24 October 2026</h3> 
 <p><b><a href="http://www.exetergardenrailwayshow.com">Exeter Garden Railway Show</a></b><br>The Matford Centre
 Matford Park Road
 Marsh Barton Ind Estate
 Exeter <a href="https://www.google.co.uk/maps/search/EX2+8FD">EX2 8FD</a><br><em></em></p>
 
-<hr><h3>1 November 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3>1 November 2025</h3> 
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
 <p><b>North West Group running day</b><br>Nazareth Unitarian Church,Church St,Padiham <a href="https://www.google.co.uk/maps/search/BB12+8JH">BB12 8JH</a><br><a href="mailto:northwest-group@g1mra.com">northwest-group@g1mra.com</a><br><em>Withnell Junction, layouts from other gauges and Hornby Dublo</em></p>
@@ -58,32 +56,31 @@ Exeter <a href="https://www.google.co.uk/maps/search/EX2+8FD">EX2 8FD</a><br><em
 <p><b>Surrey Group public running day</b><br>Dorking URC Hall <a href="https://www.google.co.uk/maps/search/RH4+1BS">RH4 1BS</a><br><em>Surrey Oval 10:00-16:00; tea and cakes available<br>
 <a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a></em></p>
  
-<hr><h3> 1-2 November 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3> 1-2 November 2025</h3> 
 <p><b><a href="https://www.g1mra.ch/france?b=100986&c=ED1000395&s=djEt0ZZqnjuOlC8nNPJtOb_8oAsplOuqgapBPhgOkDnIAkg">Savoie Mod&eacute;lisme</a></b><br>Parc des Expositions SAVOIEXPO avenue du Grand Arietaz 73000 Chambéry<br>
 <a href="mailto:french-group@g1mra.com">french-group@g1mra.com</a><br><em></em></p>
 
-<hr><h3>11 November 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3>11 November 2025</h3> 
 <p><b>Surrey Group GTG</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
-<hr><h3>22-23 November 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3>22-23 November 2025</h3> 
 <p><b><a href="https://www.rmweb.co.uk/shows/nfrm/">National Festival of Railway Modelling</a></b><br>NEC, Birmingham <a href="https://www.google.co.uk/maps/search/B40+1NT">B40 1NT</a><br><em>Ridings track courtesy of the Yorkshire Group</em></p>
 
-<hr><h3>29 November 2025</h3> 
+<div style="flex-basis:100%"><hr></div><h3>29 November 2025</h3> 
 <p><b>Yorkshire Group Christmas running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
-<hr><h3>10 January 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>10 January 2026</h3>
 <p><b>Traditional First Steam GTG (Members only)</b><br><a href="mailto:wiggertal-live-steam-group@g1mra.com">wiggertal-live-steam-group@g1mra.com</a><br><em>11.00-17.00</em></p>
 
-<hr><h3>11 January 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>11 January 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-<hr><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+<div style="flex-basis:100%"><hr></div><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
-<hr><h3>17 January 2026</h3>
+<div style="flex-basis:100%"><hr></div><h3>17 January 2026</h3>
 <p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
+</div><!-- close ebox -->
 
-      </div><!-- close ebox -->
-    </div>
-  </div><!-- close vbox --></div><!-- close cbox -->
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
-</html> 
+</html>
