--- a/suppliers_en.html
+++ b/suppliers_en.html
@@ -1,6 +1,5 @@
 
-  <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-25 01:37:07 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,36 +9,37 @@
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
-<div class=cbox><div class=vbox>
-    
+<div class=pagebox>
+<div class=vbox>
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class="navMenu">
+  <div class=vbox><div class=hbox>
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html"><div style="color:mediumseagreen;">Resources</div></a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
-<br><br>
+</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
 <a href="sales_en.html">Books</a>
 <a href="sales_en.html">Parts</a>
 <a href="sales_en.html">Kits</a>
 <a href="sales_en.html">Clothing</a>
 <a href="sales_en.html">Marketplace</a>
 <a href="sales_en.html"><div style="color:mediumseagreen;">Suppliers</div></a>
-</div>
+</div><!-- close hbox --></div><!-- close vbox -->
+  <div class="filler"></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="content"><div class=ebox>
+
 
 <h1>Kits and ready-to-run</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Accucraft UK </h3>
 <p>
  1:32 scale live-steam locomotives and rolling stock. RTR and kits</p>
@@ -48,7 +48,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Barrett Steam Models </h3>
 <p>
  10mm scale live-steam locomotive kits.</p>
@@ -57,7 +57,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Bowande Live Steam</h3>
 <p>
  Live-steam locomotives.</p>
@@ -66,7 +66,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Bowaters Models </h3>
 <p>
  1:32 and 10mm scale model locomotive and rolling stock kits.</p>
@@ -75,7 +75,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Fred Phipps </h3>
 <p>
  Locomotive and rolling stock kits.</p>
@@ -84,7 +84,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Peter Rogers </h3>
 <p>
  Model coaches.</p>
@@ -93,7 +93,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Steve Golding </h3>
 <p>
  Locomotive and rolling stock kits.</p>
@@ -102,7 +102,7 @@
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Tenmille Products </h3>
 <p>
 Track and rolling stock kits.</p>
@@ -111,7 +111,7 @@ Track and rolling stock kits.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Tower Models </h3>
 <p>
 RTR brass locomotives and coaches.</p>
@@ -119,11 +119,11 @@ RTR brass locomotives and coaches.</p>
 <p><a href="mailto:sales@tower--models.com">sales@tower--models.com</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Parts</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Castle Steam Boilers </h3>
 <p>
  Model steam boilers.</p>
@@ -132,7 +132,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Just the Ticket </h3>
 <p>
  Model engineering supplies and locomotive kits.</p>
@@ -141,7 +141,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Ken Martin </h3>
 <p>
  Lost wax castings for locomotives and rollingstock.</p>
@@ -150,7 +150,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Model Engineers Laser </h3>
 <p>
  Laser cut parts.</p>
@@ -159,7 +159,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Peter Korzilius </h3>
 <p>
  Wagon kits and parts.</p>
@@ -168,7 +168,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Todmorden Model Supplies </h3>
 <p>
  Modelling tools and materials.</p>
@@ -177,7 +177,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Walsall Model Industries </h3>
 <p>
  Castings and parts.</p>
@@ -185,11 +185,11 @@ RTR brass locomotives and coaches.</p>
 <p><a href="mailto:info@walsallmodelindustries.co.uk">info@walsallmodelindustries.co.uk</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Radio control and electronics</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Brian Jones </h3>
 <p>
  Radio and electronic controls.</p>
@@ -198,7 +198,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Fosworks </h3>
 <p>
  RC, sound systems, axle motors.</p>
@@ -207,7 +207,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Strikalite Batteries </h3>
 <p>
  Batteries and radio control.</p>
@@ -215,11 +215,11 @@ RTR brass locomotives and coaches.</p>
 <p><a href="mailto:info@strikalite.co.uk">info@strikalite.co.uk</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Finishing touches</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Cromford Designs </h3>
 <p>
  Painting and lining service.</p>
@@ -228,7 +228,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Diane Carney Nameplates </h3>
 <p>
  Custom nameplates.</p>
@@ -237,7 +237,7 @@ RTR brass locomotives and coaches.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Fox Transfers </h3>
 <p>
 Transfers of railway insignia.</p>
@@ -245,11 +245,11 @@ Transfers of railway insignia.</p>
 <p><a href="mailto:mail@fox-transfers.co.uk">mail@fox-transfers.co.uk</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Constructors</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Mike Danby </h3>
 <p>
  Locomotive builder.</p>
@@ -258,7 +258,7 @@ Transfers of railway insignia.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Peter Alliott </h3>
 <p>
  Locomotive construction, servicing and repair.</p>
@@ -266,11 +266,11 @@ Transfers of railway insignia.</p>
 <p><a href="mailto:alliott49@btintemet.com">alliott49@btintemet.com</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Trackwork</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Cliff Barker </h3>
 <p>
  Gauge 1 track and rolling stock.</p>
@@ -279,7 +279,7 @@ Transfers of railway insignia.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Marcway Paintwork</h3>
 <p>
  Track and track parts.</p>
@@ -288,7 +288,7 @@ Transfers of railway insignia.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Tenmille Products </h3>
 <p>
 Track and rolling stock kits.</p>
@@ -296,11 +296,11 @@ Track and rolling stock kits.</p>
 <p><a href="mailto:trains@tenmille.com">trains@tenmille.com</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Structures</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Brunel Models </h3>
 <p>
  Model buildings and structures.</p>
@@ -309,7 +309,7 @@ Track and rolling stock kits.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Railmodel </h3>
 <p>
  Laser-cut structure kits.</p>
@@ -317,11 +317,11 @@ Track and rolling stock kits.</p>
 <p><a href="mailto:andy@railmodel.co.uk">andy@railmodel.co.uk</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Books</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Camden Miniature Steam Services </h3>
 <p>
  Books,DVDs.</p>
@@ -330,7 +330,7 @@ Track and rolling stock kits.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>GM Transport Books </h3>
 <p>
 Railway and other transport books.</p>
@@ -338,11 +338,11 @@ Railway and other transport books.</p>
 <p><a href="mailto:gmtransportbooks@gmail.com">gmtransportbooks@gmail.com</a>
 </p>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 
 <h1>Shops, dealers and auction houses</h1>
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Dreweatts </h3>
 <p>
  Transport model auctioneers.</p>
@@ -351,7 +351,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Ellis Clark Trains </h3>
 <p>
  Model purchase and sales.</p>
@@ -360,7 +360,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Garden Railway Specialists </h3>
 <p>
  Track and RTR locomotives and rolling stock.</p>
@@ -369,7 +369,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Rushford Barn Models </h3>
 <p>
  New and pre-owned locomotives and rolling stock.</p>
@@ -378,7 +378,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Special Auction Services </h3>
 <p>
  Railway item auctioneers.</p>
@@ -387,7 +387,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>TMS Models </h3>
 <p>
  Locomotive and rolling stock sales service.</p>
@@ -396,7 +396,7 @@ Railway and other transport books.</p>
 </p>
 
 
-<hr>
+<div style="flex-basis:100%"><hr></div>
 <h3>Vectis </h3>
 <p>
  Train and collectable auctioneers.</p>
@@ -404,7 +404,7 @@ Railway and other transport books.</p>
 <p><a href="mailto:louise@vectis.co.uk">louise@vectis.co.uk</a>
 </p>
 
-</div><!-- close ebox --></div>
-  </div><!-- close vbox --></div><!-- close cbox -->
+
+</div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
