New menu macros

--- a/suppliers_en.html
+++ b/suppliers_en.html
@@ -1,41 +1,26 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 17:41:35 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <html lang="en">
-<title>G1MRA home</title>
+<title>Suppliers</title>
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
 <div class=pagebox>
 <div class=vbox>
-<div class=navbar>
-  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class=vbox><div class=hbox>
-<a href="events_en.html">Events</a>
-<a href="groups_en.html">Groups</a>
-<a href="resources_en.html"><div style="color:mediumseagreen;">Resources</div></a>
-<a href="sales_en.html">Sales</a>
-<a href="contact_en.html">Contact</a>
-<a href="join_en.html">Join or renew</a>
-</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
-<a href="sales_en.html">Books</a>
-<a href="sales_en.html">Parts</a>
-<a href="sales_en.html">Kits</a>
-<a href="sales_en.html">Clothing</a>
-<a href="sales_en.html">Marketplace</a>
-<a href="sales_en.html"><div style="color:mediumseagreen;">Suppliers</div></a>
-</div><!-- close hbox --></div><!-- close vbox -->
-  <div class="filler"></div>
-  <div class="flags">
-    <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
-    <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
-    <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
-  </div><!-- close flags -->
+<div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
+<div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html"><div style="color:mediumseagreen;">Sales</div></a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox><a href="Books_en.html">Books</a><a href="Parts_en.html">Parts</a><a href="Kits_en.html">Kits</a><a href="Clothing_en.html">Clothing</a><a href="Marketplace_en.html">Marketplace</a><a href="Suppliers_en.html"><div style="color:mediumseagreen;">Suppliers</div></a></div><!-- close hbox --></div><!-- close vbox -->
+<div class="filler"></div>
+<div class="flags">
+  <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
+  <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
+  <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
+</div><!-- close flags -->
 </div><!-- close navbar	 -->
-
+<div class=ebox>
 
 <h1>Kits and ready-to-run</h1>
 
@@ -404,7 +389,7 @@ Railway and other transport books.</p>
 <p><a href="mailto:louise@vectis.co.uk">louise@vectis.co.uk</a>
 </p>
 
-
+</div><!-- close ebox -->
 </div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
