--- a/groups_en.html
+++ b/groups_en.html
@@ -1,26 +1,18 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 17:41:35 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <html lang="en">
-<title>G1MRA home</title>
+<title>Groups</title>
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
 <div class=pagebox>
 <div class=vbox>
-<div class=navbar>
-  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class=vbox><div class=hbox>
-<a href="events_en.html">Events</a>
-<a href="groups_en.html"><div style="color:mediumseagreen;">Groups</div></a>
-<a href="resources_en.html">Resources</a>
-<a href="sales_en.html">Sales</a>
-<a href="contact_en.html">Contact</a>
-<a href="join_en.html">Join or renew</a>
-</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
+<div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
+<div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html"><div style="color:mediumseagreen;">Groups</div></a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
 <div class="groupBanner">
   <a href="#flag_au"><img src="images/Flag_of_Australia_(converted).svg" alt="Jump to Australian groups" title="Jump to Australian groups"></a>
   <a href="#flag_ca"><img src="images/Flag_of_Canada_(Pantone).svg" alt="Jump to Canadian groups" title="Jump to Canadian groups"></a>
@@ -28,7 +20,6 @@
   <a href="#flag_fr"><img src="images/Flag_of_France_(2024-present).svg" alt="Jump to French groups" title="Jump to French groups"></a>
   <a href="#flag_de"><img src="images/Flag_of_Germany_(RGB).svg" alt="Jump to German groups" title="Jump to German groups"></a>
   <a href="#flag_nl"><img src="images/Flag_of_the_Netherlands.svg" alt="Jump to Netherlands groups" title="Jump to Netherlands groups"></a>
-  <nl>
   <a href="#flag_nz"><img src="images/Flag_of_New_Zealand.svg" alt="Jump to New Zealand groups" title="Jump to New Zealand groups"></a>
   <a href="#flag_za"><img src="images/Flag_of_South_Africa.svg" alt="Jump to South African groups" title="Jump to South African groups"></a>
   <a href="#flag_ch"><img src="images/Flag_of_Switzerland_(Pantone).svg" alt="Jump to Swiss groups" title="Jump to Swiss groups"></a>
@@ -37,12 +28,12 @@
   <a href="#flag_ww"><img src="images/Globe_icon.svg.png" alt="Jump to global special-interest groups" title="Jump to global special-interest groups"></a>
 </div>
 </div><!-- close hbox --></div><!-- close vbox -->
-  <div class="filler"></div>
-  <div class="flags">
-    <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
-    <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
-    <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
-  </div><!-- close flags -->
+<div class="filler"></div>
+<div class="flags">
+  <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
+  <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
+  <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
+</div><!-- close flags -->
 </div><!-- close navbar	 -->
 
 <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
