--- a/join_en.html
+++ b/join_en.html
@@ -1,43 +1,35 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 06:27:53 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 17:41:35 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <html lang="en">
-<title>G1MRA home</title>
+<title>Join</title>
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
 <div class=pagebox>
 <div class=vbox>
-<div class=navbar>
-  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
-  <div class=vbox><div class=hbox>
-<a href="events_en.html">Events</a>
-<a href="groups_en.html">Groups</a>
-<a href="resources_en.html">Resources</a>
-<a href="sales_en.html">Sales</a>
-<a href="contact_en.html">Contact</a>
-<a href="join_en.html"><div style="color:mediumseagreen;">Join or renew</div></a>
-</div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
-  <div class="filler"></div>
-  <div class="flags">
-    <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
-    <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
-    <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
-  </div><!-- close flags -->
+<div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
+<div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html"><div style="color:mediumseagreen;">Join</div></a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
+<div class="filler"></div>
+<div class="flags">
+  <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
+  <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
+  <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
+</div><!-- close flags -->
 </div><!-- close navbar	 -->
 
       <div class=tbox>
         <h1>Joining the Gauge One Model Railway Association</h1>
         <p>We welcome all new members with an interest in running Gauge 1 stock and other scales on near-45mm track gauges.</p>
 
-<div class="hbox">
+<div class=hbox>
 <div><a href="images/Recruiting-brochure-7.pdf"><img src="images/welcomeToGauge1.jpg" height="130" style="padding:20px 10px"></a></div>
 <div><a href="images/G1MRA_229.pdf"><img src="images/G1MRA_229_cover.jpg" height="130"  style="padding:20px 10px"></a></div>
-<div> <p  style="padding:0px 10px"> We run models powered by on-board batteries, by track-supplied current and by live steam with boilers fired by alcohol, gas or coal. Even clockwork engines still make occasional appearances. You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine.</p></div>
-</div>
+<div>We run models powered by on-board batteries, by track-supplied current and by live steam with boilers fired by alcohol, gas or coal. Even clockwork engines still make occasional appearances. You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine</div>
+</div><!-- close hbox -->
 
         <h2>Current subscription rates</h2>
         <p>UK adult individual annual membership is £30.00;  Europe: £32.00; rest of the world: £36.00.</p>
