Create placeholder pages for resources and sales

--- a/Designs_en.html
+++ b/Designs_en.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <html lang="en">
-<title>Sales</title>
+<title>Designs</title>
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
 <div class=pagebox>
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
-<div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html"><div style="color:mediumseagreen;">Sales</div></a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox><a href="Books_en.html">Books</a><a href="Parts_en.html">Parts</a><a href="Kits_en.html">Kits</a><a href="Clothing_en.html">Clothing</a><a href="Marketplace_en.html">Marketplace</a><a href="Suppliers_en.html">Suppliers</a></div><!-- close hbox --></div><!-- close vbox -->
+<div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html"><div style="color:mediumseagreen;">Resources</div></a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox><a href="Safety_en.html">Safety</a><a href="Standards_en.html">Standards</a><a href="Designs_en.html"><div style="color:mediumseagreen;">Designs</div></a><a href="Tracks_en.html">Tracks</a><a href="History_en.html">History</a><a href="Gauge2_en.html">Gauge2</a><a href="Connections_en.html">Connections</a></div><!-- close hbox --></div><!-- close vbox -->
 <div class="filler"></div>
 <div class="flags">
   <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
@@ -20,7 +20,7 @@
   <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
 </div><!-- close flags -->
 </div><!-- close navbar	 -->
-<div class=ebox><h1>Sales</h1></div><!-- close ebox -->
+<div class=ebox><h1>Designs</h1></div><!-- close ebox -->
 </div><!-- close vbox --></div><!-- close pagebox -->
 </body>
 </html>
