--- a/PastEvents_en.html
+++ b/PastEvents_en.html
@@ -1,11 +1,11 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 22:24:50 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <html lang="en">
-<title>PastEvents_en.html</title>
+<title>PastEvents</title>
 <meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
