New fixed-width menus

--- a/Groups_en.html
+++ b/Groups_en.html
@@ -1,5 +1,5 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-27 00:22:40 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class=pagebox>
+<div style="flex-basis:1000px">
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
 <div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html"><div style="color:mediumseagreen;">Groups</div></a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox>
@@ -37,7 +38,7 @@
 </div><!-- close navbar	 -->
 
 <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
-<div class=tbox><h1>G1MRA groups</h1>
+<div class=cbox><div class=tbox><h1>G1MRA groups</h1>
 <p>G1MRA has many local groups which range in size from a few friends who run together, up to large scale groups which have their own separate subscription and committee structure, run exhibitions and manage portable tracks.</p>
 <p>Groups arrange their own meetings, many of which are in private gardens. This is a public website, so we do not publish names or addresses for these events. The best way to find out about activities in your area is to locate your nearest group, and then email the group contact using the address in the listing below (quoting your membership number). Alternatively, email enquries to the G1MRA groups coordinator as <a href="mailto:groups@g1mra.com">groups@g1mra.com</a>.</p>
 <p>We also have <a href="#flag_ww">global special interest groups</a> such as the Gauge One 3D Circle which are not limited to geographical regions. These kinds of groups operate mostly via email and electronic forums, and have members all over the world.
@@ -128,7 +129,9 @@
 <a href=""><b>1:32 Finescale Group</b></a>&emsp;<a href="mailto:fine-scale-group@g1mra.com">fine-scale-group@g1mra.com</a><br>
 <a href=""><b>The Gauge One 3D Circle</b></a>&emsp;<a href="mailto:3d-circle-group@g1mra.com">3d-circle-group@g1mra.com</a><br>
 <a href=""><b>Vintage Tinplate Group</b></a>&emsp;<a href="mailto:vintage-tinplate-group@g1mra.com">vintage-tinplate-group@g1mra.com</a><br>
-</p></div><!-- close tbox -->
-</div><!-- close vbox --></div><!-- close pagebox -->
+</p></div><!-- close tbox --></div><!-- close cbox -->
+</div><!-- close vbox -->
+</div>
+</div><!-- close pagebox -->
 </body>
 </html>
