--- a/History_en.html
+++ b/History_en.html
@@ -1,5 +1,5 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-27 00:22:40 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class=pagebox>
+<div style="flex-basis:1000px">
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
 <div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html"><div style="color:mediumseagreen;">Resources</div></a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox><a href="Safety_en.html">Safety</a><a href="Standards_en.html">Standards</a><a href="Designs_en.html">Designs</a><a href="Tracks_en.html">Tracks</a><a href="History_en.html"><div style="color:mediumseagreen;">History</div></a><a href="Gauge2_en.html">Gauge2</a><a href="Connections_en.html">Connections</a></div><!-- close hbox --></div><!-- close vbox -->
@@ -21,6 +22,8 @@
 </div><!-- close flags -->
 </div><!-- close navbar	 -->
 <div class=ebox><h1>History</h1></div><!-- close ebox -->
-</div><!-- close vbox --></div><!-- close pagebox -->
+</div><!-- close vbox -->
+</div>
+</div><!-- close pagebox -->
 </body>
 </html>
