--- a/Home_en.html
+++ b/Home_en.html
@@ -1,5 +1,5 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-27 00:22:40 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class=pagebox>
+<div style="flex-basis:1000px">
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
 <div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
@@ -30,13 +31,12 @@
 <p>In Spring 1947 a small group of enthusiasts came together to keep the spirit of Gauge 1 alive, and the first edition of the G1MRA journal was published the following April. Since then we have grown to an international association with around 2,000 members in over twenty countries.</p>
 <p>We run models powered by on-board batteries, by track-supplied current and by live steam with boilers fired by alcohol, gas or coal. Even clockwork engines still make occasional appearances.</p>
         <div class=hbox>
-          <div class=hbox>
-            <a href="images/Recruiting-brochure-7.pdf"><img src="images/thumbs/welcomeToGauge1.jpg" alt="Front cover image of welcome brochure" title="Front cover image of welcome brochure"></a>
+<p>The size of Gauge 1 models allows for exquisite levels of detail in fine-scale models, and the availability of robust, simplified models also makes it an ideal scale for youngsters. You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine.</p>
+  
+           <a href="images/Recruiting-brochure-7.pdf"><img src="images/thumbs/welcomeToGauge1.jpg" alt="Front cover image of welcome brochure" title="Front cover image of welcome brochure"></a>
             <p style="padding-right:20px"></p>
             <a href="images/G1MRA_229.pdf"><img src="images/thumbs/G1MRA_229_cover.jpg" alt="Front cover image of magazine issue 229" title="Front cover image of magazine issue 229"></a>
-          </div><!-- close hbox -->
           <p style="padding-right:20px"></p>
-          <p>The size of Gauge 1 models allows for exquisite levels of detail in fine-scale models, and the availability of robust, simplified models also makes it an ideal scale for youngsters. You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine.</p>
         </div><!-- close hbox -->
         <p>We hope you enjoy exploring this site. Our members form an enthusiastic and knowledgable community which shares expertise ranging from 130 year old clockwork design through to the most modern 3D printing and computer-based control techniques. New members are always welcome: please see <a href="join_en.html">this page</a> for details.</p>
       </div><!-- close tbox -->    
@@ -81,6 +81,8 @@
         <h1><a href="events_en.html">More events</a>
   
 </div><!-- close sbox --></div><!-- close hbox -->
-</div><!-- close vbox --></div><!-- close pagebox -->
+</div><!-- close vbox -->
+</div>
+</div><!-- close pagebox -->
 </body>
 </html>
