--- a/PastEvents_en.html
+++ b/PastEvents_en.html
@@ -1,5 +1,5 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-27 00:22:40 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class=pagebox>
+<div style="flex-basis:1000px">
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
 <div class=vbox><div class=hbox><a href="Events_en.html"><div style="color:mediumseagreen;">Events</div></a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html">Contact</a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
@@ -73,6 +74,8 @@ Exeter <a href="https://www.google.co.uk/maps/search/EX2+8FD">EX2 8FD</a><br><em
 <p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 </div><!-- close ebox -->
 
-</div><!-- close vbox --></div><!-- close pagebox -->
+</div><!-- close vbox -->
+</div>
+</div><!-- close pagebox -->
 </body>
 </html>
