--- a/Contact_en.html
+++ b/Contact_en.html
@@ -1,5 +1,5 @@
 
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-26 23:16:30 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-27 00:22:40 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class=pagebox>
+<div style="flex-basis:1000px">
 <div class=vbox>
 <div class=navbar><div class="logo"><a href="index.html"><img src="images/g1mra-logo-75.png" title="Home page"></a></div>
 <div class=vbox><div class=hbox><a href="Events_en.html">Events</a><a href="Groups_en.html">Groups</a><a href="Resources_en.html">Resources</a><a href="Sales_en.html">Sales</a><a href="Contact_en.html"><div style="color:mediumseagreen;">Contact</div></a><a href="Join_en.html">Join</a></div><!-- close hbox --><div style="flex-basis:100%"><hr></div><div class=hbox></div><!-- close hbox --></div><!-- close vbox -->
@@ -21,7 +22,7 @@
 </div><!-- close flags -->
 </div><!-- close navbar	 -->
 
-      <div class=tbox>
+      <div class=cbox><div class=tbox>
         <h1>G1MRA contact email addresses</h1>
         <p>
           Committee chair: <a href="mailto:chair@g1mra.com">chair@g1mra.com</a></p>
@@ -38,9 +39,11 @@
 <p>          Parts, kits and clothing sales: <a href="mailto:sales@g1mra.com">sales@g1mra.com</a></p>
 <p>          Membership enquiries: <a href="mailto:membership@g1mra.com">membership@g1mra.com</a></p>
 <p>          Web page corrections and updates: <a href="mailto:web@g1mra.com">web@g1mra.com</a>
-        </p>
-  </div><!-- close tbox -->
+        </p></div><!-- close tbox -->
+  </div><!-- close cbox -->
 
-</div><!-- close vbox --></div><!-- close pagebox -->
+</div><!-- close vbox -->
+</div>
+</div><!-- close pagebox -->
 </body>
 </html>
